# code-samples

./: .editorconfig  .gitignore  README.md
.github/workflows/: ci.yml
01-backend-nestjs-clean-arch/: .eslintrc.js  .prettierrc  Dockerfile  README.md  env.example  package-lock.json  package.json  tsconfig.json
01-backend-nestjs-clean-arch/src/: app.module.ts  main.ts
01-backend-nestjs-clean-arch/src/common/errors/: domain-errors.ts  global-exception.filter.ts  validation-exception.filter.ts
01-backend-nestjs-clean-arch/src/common/interceptors/: index.ts  logging.interceptor.ts  transform.interceptor.ts
01-backend-nestjs-clean-arch/src/common/pipes/: index.ts  parse-int.pipe.ts  validation.pipe.ts
01-backend-nestjs-clean-arch/src/common/types/: user.types.ts
01-backend-nestjs-clean-arch/src/config/: app.config.ts  database.config.ts  index.ts  security.config.ts  validation.config.ts
01-backend-nestjs-clean-arch/src/health/: health.controller.ts  health.module.ts
01-backend-nestjs-clean-arch/test/: users.e2e-spec.ts
02-frontend-react-component/: .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
02-frontend-react-component/src/: App.css  App.tsx
02-frontend-react-component/src/hooks/: useUsers.test.tsx  useUsers.ts
02-frontend-react-component/src/lib/: api.test.ts  api.ts
02-frontend-react-component/src/test/: setup.ts
02-frontend-react-component/src/types/: user.types.ts
03-infra-docker-cicd/: README.md  docker-compose.yml
03-infra-docker-cicd/nginx/: nginx.conf
03-infra-docker-cicd/postgres/: init.sql
04-cpp-geometry-calculator/: CMakeLists.txt  README.md
04-cpp-geometry-calculator/include/: geometry_calculator.h
04-cpp-geometry-calculator/include/shapes/: circle.h  rectangle.h  shape.h  triangle.h
04-cpp-geometry-calculator/src/: geometry_calculator.cpp  main.cpp
04-cpp-geometry-calculator/src/shapes/: circle.cpp  rectangle.cpp  triangle.cpp
04-cpp-geometry-calculator/test/: test_circle.cpp  test_geometry_calculator.cpp  test_rectangle.cpp  test_triangle.cpp
(+23 files in other folders)
